public/css/styles/3.css
@import url('https://fonts.googleapis.com/css?family=Overlock:400,400i,700,700i,900,900i');
@import url('https://fonts.googleapis.com/css?family=Fira+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
}

html {
    font-size: 16px;
}

@media screen and (max-width: 568px) {
    html {
        font-size: 12px;
    }

    p {
        font-size: 1.16rem;
    }
}

h3 {
    font-family: 'Fira Sans', sans-serif;
}

.container-heading {
    max-width: 920px;
}

.left-border-holder {
    width: 100%;
    height: 300px;
    position: absolute;
    padding: 10px;
}

.left-border {
    background-image: url('/img/tealborder-left.png');
    background-repeat: no-repeat;
    background-size: 320px;
    background-position: top left;
    width: 100%;
    height: 300px;
}

.right-border-holder {
    width: 100%;
    height: 300px;
    position: absolute;
    padding: 10px;
}

.right-border {
    background-image: url('/img/tealborder-right.png');
    background-repeat: no-repeat;
    background-size: 320px;
    background-position: top right;
    width: 100%;
    height: 300px;
}

@media screen and (max-width: 1520px) {
    .left-border, .right-border {
        background-size: 200px;
    }
}

@media screen and (max-width: 568px) {
    .left-border, .right-border {
        background-size: 140px;
    }
}

@media screen and (max-width: 400px) {
    .left-border, .right-border {
        background-size: 100px;
    }
}

.invite-top {
    -webkit-box-shadow: 0px -0.1rem 1rem 0px rgba(0,0,0,0.8);
    -moz-box-shadow: 0px -0.1rem 1rem 0px rgba(0,0,0,0.8);
    box-shadow: 0px -0.1rem 1rem 0px rgba(0,0,0,0.8);
}

.invite-top.bg-paper {
    padding-top: 0;
    padding-bottom: 0;
}

.invite-top.half-bg::after {
    content: "";
    background-image: url("/img/clean-textile.png");
    /*background-color: #ffffde;*/
    background-color: #ffffff;
    opacity: 0.4;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    z-index: -1;
}

.invite-bottom {
    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)), url('/img/palmerstown2.jpg');
    background-size: cover;
    background-position: center;
    padding-top: 40px;
    padding-bottom: 40px;
    margin: 0 auto;
}

.invite-footer::after {
    content: "";
    background-image: url("/img/clean-textile.png");
    background-color: #ffffff;
    opacity: 0.4;
}

.invite-footer {
    background-image: url("/img/clean-textile.png");
    background-color: #ffffff;
    text-align: center;
    padding: 2.5rem 0;
    padding-right: 1.7rem;
}

.invite-footer img {
    width: 6.25rem;
}

@media screen and (max-width: 767px) {
    .invite-footer {
        background-size: 210px 210px;
    }
}

/******************************************/

.invite-heading {
    text-align: center;
    padding: 3.75rem 0 3.125rem 0;
    font-size: 2.75rem;
    letter-spacing: -0.1rem;
    color: #009ba3;
    font-style: italic;
    font-weight: 400;
    font-family: Overlock, sans-serif;
}

.invite-heading .lead {
    font-size: 1.25rem;
    letter-spacing: normal;
    margin-bottom: 1.6rem;
    font-style: normal;
}

.invite-heading .lead p {
    margin-bottom: 0.3rem;
}

.invite-heading .lead .name {
    font-size: 1.5rem;
    font-weight: 900;
}

.invite-heading .lead .note {
    width: 36rem;
    margin: 0 auto;
    line-height: 1;
}

.invite-heading .hero {
    line-height: 0.8;
}

.invite-heading .hero .name {
    font-size: 4.5rem;
    color: #008c94;
    font-style: italic;
}

.invite-heading .hero .and {
    line-height: 0.2;
    padding-top: 0.3rem;
}

@media screen and (max-width: 400px) {
    .invite-heading {
        padding: 2.73rem 0 2.27rem 0;
    }

    .invite-heading .hero .name {
        font-size: 3.27rem;
    }
}

@media screen and (max-width: 568px) {
    .invite-heading p {
        font-size: 2rem;
    }
}

.bg-paper hr.rule {
    overflow: visible; /* For IE */
    padding: 0;
    border: none;
    border-top: medium double #009ba3;
    color: #009ba3;
    text-align: center;
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    width: 890px;
}


@media screen and (max-width: 1100px) {
    .bg-paper hr.rule {
        width: 600px;
    }
}


@media screen and (max-width: 768px) {
    .bg-paper hr.rule {
        width: 80%;
    }
}

.button-container {
    width: 44rem;
    margin: 0 auto;
}

a.button {
    display: block;
    float: left;
    width: 20rem;
    text-align: center;
    font-size: 1.6rem;
    font-weight: 200;
    background: #fff;
    border-radius: 0.6rem;
    padding: 1rem;
    margin: 0 1rem;
    color: #000;
    text-decoration: none;
    transition: 0.3s;
    -webkit-box-shadow: 0 3px 5px 1px rgba(0,0,0,0.2);
    -moz-box-shadow: 0 3px 5px 1px rgba(0,0,0,0.2);
    box-shadow: 0 3px 5px 1px rgba(0,0,0,0.2);
}

a.button:hover {
    background-color: #009ba3;
}

/**********************************/

.when-and-where {
    font-family: 'Fira Sans', sans-serif;
    font-weight: 300;
    text-align: center;
    width: 890px;
    margin: 1rem auto 0 auto;
}

@media screen and (max-width: 991px) {
    .when-and-where {
        width: 100%;
    }
}

.when-and-where .time-and-date {
    float: left;
    width: 50%;
    margin: 0 auto 2rem auto;
    font-size: 1.6rem;
}

@media screen and (max-width: 991px) {
    .when-and-where .time-and-date {
        width: 100%;
        float: none;
    }
}

.when-and-where .time-and-date .day {
    line-height: 1rem;
}

.when-and-where .time-and-date .date {
    font-size: 2.2rem;
    font-weight: 500;
    font-style: normal;
    line-height: 3rem;
}

.when-and-where .time-and-date .date-day {
    letter-spacing: 0rem;
}

.when-and-where .time-and-date .date-year {
    letter-spacing: 0rem;
}
/* ... */

